--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".result.ResultActivity"></activity>
-        <activity android:name=".quiz.QuizActivity" />
-        <activity android:name=".main.MainActivity">
+        <activity android:name=".presentation.result.ResultActivity"></activity>
+        <activity android:name=".presentation.quiz.QuizActivity" />
+        <activity android:name=".presentation.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
